testsuite/single/tests/compiler/fail/lvar_func2.lpc
void foo() {
    int x;
    (: x + 1 :);
}
